# Aexor

./: .env  .env.example  .gitignore  .gitleaksignore  Aexor_Pitch_HighLevel.docx  CLAUDE.md  COMPONENT_STATUS.md  DEPLOYMENT.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SECURITY.md  aexor_pitch.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  pytest_simple.ini  requirements.txt
.claude/: CLAUDE.md  CLAUDE_SETUP.md
.claude-flow/metrics/: system-metrics.json
.claude/agents/: architect.md  implementer.md  planner.md  pr-manager.md  verifier.md
.claude/commands/: design.md  flow_orchestrate.md  primer.md  specify.md
.claude/skills/: async-python-patterns.md  create-component-spec.md  fix-bug.md  review-architecture.md  review-plan-schema.md  update-component-status.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  development_commands.md  project_overview.md
.specify/memory/: constitution.md
.specify/scripts/bash/: create-new-feature.sh
.specify/templates/: spec-template-component.md  spec-template-usecase.md
components/ApprovalGate/: LLD.md  __init__.py  tasks.md  verification-report.md
components/ApprovalGate/adapters/: __init__.py  gate_store.py  token_issuer.py
components/ApprovalGate/diagrams/: flow.md
components/ApprovalGate/domain/: __init__.py  models.py
components/ApprovalGate/service/: __init__.py  approval_service.py
components/ApprovalGate/tests/: __init__.py  conftest.py  test_contract.py  test_observability.py  test_service.py  (+1 more)
components/Audit/: LLD.md  tasks.md  verification-report.md
components/ContextRAG/: LLD.md  __init__.py  tasks.md
components/ExecuteOrchestrator/: LLD.md  tasks.md  verification-report.md
components/ExecutionMonitor/: LLD.md  __init__.py
components/History/: IMPLEMENTATION_SUMMARY.md  LLD.md  __init__.py  tasks.md  verification-report.md
components/Intake/: LLD.md  tasks.md  verification-report.md
components/PlanLibrary/: LLD.md  README.md  __init__.py  main.py  tasks.md  verification-report.md
components/PlanWriter/: LLD.md  __init__.py  tasks.md  verification-report.md
components/Planner/: LLD.md  LLD_context_optimization.md  __init__.py  tasks.md
components/PluginRegistry/: LLD.md  __init__.py  tasks.md  verification-report.md
components/PolicyEngine/: LLD.md  __init__.py  tasks.md
components/PreviewOrchestrator/: LLD.md  __init__.py  tasks.md  verification-report.md
components/ProfileStore/: LLD.md  __init__.py  tasks.md
components/Scheduler/: LLD.md  __init__.py
components/Signer/: LLD.md  __init__.py  tasks.md
components/TrustFilter/: LLD.md  __init__.py  tasks.md  verification-report.md
components/VectorIndex/: LLD.md  __init__.py  tasks.md  verification-report.md
docs/: DEPLOYMENT.md  QUICKSTART.md
docs/architecture/: GLOBAL_SPEC.md  MODULAR_ARCHITECTURE.md  PROJECT_STRUCTURE.md  Project_HLD.md  QUICK_REFERENCE.md  SHARED_INFRASTRUCTURE.md
docs/dev/: PYTHON_GUIDE.md
migrations/: 001_create_users_table.sql  002_create_preferences_table.sql  003_add_password_hash.sql  004_create_history_tables.sql  005_create_planlibrary_tables.sql  006_create_pluginregistry_tables.sql  007_update_plan_embeddings_vectorindex.sql  008_create_execution_tracker_table.sql  009_create_audit_events_table.sql  010_create_credential_vault_table.sql  011_create_user_connections_table.sql  012_drop_pluginregistry_tables.sql  013_add_plan_outcomes_columns.sql  014_create_scheduled_plans_table.sql  015_create_tool_embeddings_table.sql
shared/: app.py  dependencies.py
shared/api/: __init__.py  auth.py  auth_routes.py  error_handlers.py  orchestrate_routes.py
shared/database/: __init__.py  adapter.py  error_handler.py  models.py
shared/mcp/: __init__.py  catalog.py  config.py  session.py  url_manager.py  user_tool_cache.py
shared/middleware/: auth.py
shared/registry/: README.md
shared/schemas/: __init__.py  approval_token.schema.json  context_budget_decision.schema.json  evidence.py  evidence.schema.json  execute_wrapper.schema.json  intent.py  intent.schema.json  metrics.py  outcome.py  plan.py  plan.schema.json  policy.py  preference_registry.py  preference_schema.json  preview_wrapper.schema.json  sanitized_payload.py  signature.py  signature.schema.json  skeleton.py  trust.py
shared/security/: encryption.py
specs/003-title-profilestore-description/: spec.md
specs/004-feature-title-planlibrary/: spec.md
specs/005-history-memory-layer/: spec.md
specs/006-pluginregistry/: spec.md
specs/007-signer/: spec.md
specs/009-vectorindex/: spec.md
specs/011-planwriter/: spec.md
specs/013-contextrag/: spec.md
specs/015-planner/: spec.md
specs/017-intake/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/021-executeorchestrator-pure-agentic/: spec.md
specs/023-policyengine-deny-default/: spec.md
specs/025-previeworchestrator-read-only/: spec.md
specs/028-approvalgate-hitl-approval/: spec.md
specs/031-executionmonitor-infrastructure-watchdog/: spec.md
specs/033-audit-platform-layer/: spec.md
specs/035-tool-discovery/: spec.md
specs/037-trust-boundary-pipeline/: spec.md
static/: index.html
tests/: test_focus_block.py  test_orchestrate_rerun.py  test_orchestrate_skeleton.py
tests/integration/: test_trust_boundary_e2e.py
tests/integration_manager/: test_connection_cache.py  test_intake_cache_warming.py  test_integration_cache.py  test_tool_catalog_user.py  test_user_tool_cache.py
tests/shared/: test_auth.py  test_auth_middleware.py  test_auth_routes.py  test_encryption.py  test_evidence.py  test_trust_boundary_schemas.py
(+345 files in other folders)
