[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aexor"
version = "0.1.0"
description = "Preview-first personal assistant with deterministic planning and multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Aexor Team"}
]
keywords = ["ai", "agent", "orchestration", "planning", "preview-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Backend
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13.0",
    # Caching & Coordination
    "redis[hiredis]>=5.0",
    # AI/LLM
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    # Utilities
    "httpx>=0.27",
    "python-dotenv>=1.0.0",
    "pydantic-core>=2.14.0",
    "typing-extensions>=4.9.0",
    # Cryptography (for plan signing)
    "cryptography>=41.0",
    "pynacl>=1.5.0",
    # JWT Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "bcrypt>=4.0,<5.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    # Structured Logging
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    "pgvector>=0.2.4",
    "ulid-py>=1.1.0",
    "onnxruntime>=1.24.3",
    "tokenizers>=0.22.2",
    "numpy>=2.4.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",  # For testing async endpoints

    # Linting & Formatting
    "ruff>=0.2.0",

    # Type Checking
    "mypy>=1.8.0",
    "types-redis>=4.6.0",

    # Development Tools
    "ipython>=8.20.0",
    "ipdb>=0.13.13",
]

[project.urls]
Homepage = "https://github.com/personal-agent/personal-agent"
Documentation = "https://github.com/personal-agent/personal-agent/docs"
Repository = "https://github.com/personal-agent/personal-agent"
Issues = "https://github.com/personal-agent/personal-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["components*", "shared*"]
exclude = ["tests*", "docs*", ".specify*", ".claude*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=components",
    "--cov=shared",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests", "components"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["components", "shared"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

# Exclude
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # Allow raising exceptions without from e
    "TC001",  # Pydantic models need runtime type access — don't move to TYPE_CHECKING
    "TC003",  # Same as TC001 for stdlib imports
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"**/tests/**" = ["ARG", "S", "B017"]  # Allow unused arguments, security issues, and broad exception assertions in tests
"**/api/routes.py" = ["ARG001"]  # FastAPI Depends() injects auth_context — intentionally unused in body
"**/api/orchestrate_routes.py" = ["ARG001"]  # Same: FastAPI Depends() for auth

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "openai.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "jose.*",
    "passlib.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
